[XForms] label failing cross-domain check should trigger xforms-link-error. Bug 338517, r=smaug+doronr